
2004-08-16	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Fix ASM_BUSY + ASM_LOCAL_ERROR on early
		ENOMEM.  Fix hang due to missing TASK_RUNNING (Fixes
		bug #3797446).
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Make
		querydisk smart about uppercasing names.

2004-05-19	Joel Becker <joel.becker@oracle.com>

	* Bumped version to 1.0.3.

2004-05-19	Joel Becker <joel.becker@oracle.com>

	* Tagging 1.0.2.

2004-05-17	Joel Becker <joel.becker@oracle.com>

	* vendor/redhat/oracleasm-2.4.21-EL.spec.in: Make base kernel
		2.4.21-15.EL, and make support required 1.0.2.
	* vendor/redhat/oracleasm-2.4.9-e.spec.in: Make support required
		1.0.2.
	* vendor/unitedlinux/oracleasm-2.4.21.spec-generic.in: Make
		support required 1.0.2.
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Correct
		upcasing errors.
	
2004-05-03	Joel Becker <joel.becker@oracle.com>

	* configure.in: Make RPM_VERSION a command-line option.

2004-05-03	Joel Becker <joel.becker@oracle.com>

	* vendor/redhat/oracleasm.init.in: UPDISK on rename.
	* vendor/unitedlinux/oracleasm.init.in: Add the rename bits.
	* tools/asmtool.c: Change to handle the xor update in the ASM
		header.

2004-04-15	Joel Becker <joel.becker@oracle.com>

	* TAXES
	* vendor/redhat/oracleasm.init.in: Added the renamedisk and
		force-renamedisk commands.
	* vendor/common/oracleasm.init.functions: Added the relabel_disk
		function.
	* tools/asmtool.c: Error when the user trys to name something
		as itself.

2004-04-14	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Add rename by name.
	
2004-04-13	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Add a FIXME.
	* tools/asmtool.c: Add rename of a disk by device.

2004-03-26	Joel Becker <joel.becker@oracle.com>

	* vendor/unitedlinux/Makefile: Remove the version-specific
		specfiles.
	* vendor/unitedlinux/oracleasm-2.4.21-%.spec.in: Removed
	* vendor/unitedlinux/oracleasm-2.4.21.spec-generic.in: Added